[gd_scene load_steps=6 format=3 uid="uid://cgm1u7f8de2ja"]

[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_2m0sl"]
[ext_resource type="PackedScene" uid="uid://107vjeby0y1r" path="res://ui/objective_card/objective_card.tscn" id="2_uxei7"]
[ext_resource type="PackedScene" uid="uid://bsxoudyg27tnk" path="res://ui/mini_map/mini_map.tscn" id="3_fonln"]
[ext_resource type="PackedScene" uid="uid://c41cmawmby0hw" path="res://ui/tutorial_pop_up/tutorial_pop_up.tscn" id="4_pmuxj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1stc"]
bg_color = Color(0.0901961, 0.0666667, 0.101961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_bottom = 5.0
anti_aliasing = false

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2m0sl")
objective_card = ExtResource("2_uxei7")

[node name="TopHUDMarginContainer" type="MarginContainer" parent="." groups=["hud"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ObjectivesContainer" type="MarginContainer" parent="TopHUDMarginContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="TopHUDMarginContainer/ObjectivesContainer"]
layout_mode = 2

[node name="ObjectivesLabel" type="RichTextLabel" parent="TopHUDMarginContainer/ObjectivesContainer/VBoxContainer"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[right][b]Objective Name[/b]
description"
fit_content = true
scroll_active = false

[node name="NotficationsContainer" type="MarginContainer" parent="TopHUDMarginContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NotificationsList" type="VBoxContainer" parent="TopHUDMarginContainer/NotficationsContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="StormTimerContainer" type="MarginContainer" parent="TopHUDMarginContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="StormTimer" type="Label" parent="TopHUDMarginContainer/StormTimerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.937255, 0.909804, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_o1stc")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPContainer" type="MarginContainer" parent="TopHUDMarginContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TopHUDMarginContainer/FPContainer"]
layout_mode = 2

[node name="FPLabel" type="Label" parent="TopHUDMarginContainer/FPContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.937255, 0.909804, 1)
theme_override_font_sizes/font_size = 32
text = "FP: 00/00"

[node name="MiniMapMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -155.0
offset_right = 155.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="MiniMapMarginContainer"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2
color = Color(0.960784, 0.937255, 0.909804, 1)

[node name="MiniMap" parent="MiniMapMarginContainer" instance=ExtResource("3_fonln")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TutorialPopUp" parent="." instance=ExtResource("4_pmuxj")]
offset_top = 245.0
offset_bottom = 245.0
